--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,9 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src="./lasagna.jpeg">
+        <h2> World's Best Lasagna Recipe</h2>
+        <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+        
     </body>
 </html>
