--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,6 +10,13 @@
         <img src="./lasagna.jpeg">
         <h2> World's Best Lasagna Recipe</h2>
         <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
-        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Sausage</li>
+            <li>Ground Beef</li>
+            <li>Onion</li>
+            <li>Garlic</li>
+            <li>Tomatoes</li>
+        </ul>
     </body>
 </html>
