Add a list of steps
An ordered list of steps has been added on how to prepare the lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,5 +18,15 @@
             <li>Garlic</li>
             <li>Tomatoes</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Gather ingredients</li>
+            <li>Cook all the meat with onion and garlic</li>
+            <li>Stir in remaining ingredients</li>
+            <li>Layer pasta and fillings</li>
+            <li>Top with cheese</li>
+            <li>Bake in the oven</li>
+            <li>Let cool</li>
+        </ol>
     </body>
 </html>
