--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,6 +27,7 @@
             <li>Top with cheese</li>
             <li>Bake in the oven</li>
             <li>Let cool</li>
+            <li>Dig in</li>
         </ol>
     </body>
 </html>
