--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+         <li><a href="recipes/lasagna.html">Lasagna</a></li>
+         <li><a href="recipes/beef-stew.html">Beef Stew</a></li>
+         <li><a href="recipes/butternut-squash-soup.html">Butternut Squash Soup</a></li>
+        </ul>
     </body>
 </html>
